--- a/web/src/components/apps/documents/DocumentsApp.module.scss
+++ b/web/src/components/apps/documents/DocumentsApp.module.scss
@@ -175,7 +175,7 @@
 // FAB
 .fab {
   position: fixed;
-  bottom: 24px;
+  bottom: calc(24px + var(--phone-bottom-ui-gap, 0px));
   right: 24px;
   width: 56px;
   height: 56px;
@@ -577,7 +577,7 @@
 
 // Composer
 .composerContent {
-  padding: 4px;
+  padding: 4px 4px calc(12px + var(--phone-bottom-ui-gap, 0px));
 }
 
 .formField {
